@@ -1,13 +1,14 @@
 #pragma once
 #include <string>
 #include "utility.h"
-#include "character.h"  // Odkazujeme relativně, protože fight.h je v resources/
+#include "character.h"
 
 struct Monster {
     std::string name;
     int health;
     int minAttack;
     int maxAttack;
+    int isBoss = false;
 };
 
 extern const char* attackPhrases[];
